# DOME

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  generate_version.sh  pyproject.toml
config/: TypeSystem.xml  default-config.yaml
deid_doc/: _version.py  bert.py  cli.py  eval.py
deid_doc/ml/: test.py  train.py  util.py
deid_doc/post_processing/: deidentify_result.py
deid_doc/pre_processing/: averbis_download.py  current_data_splits.py  document_metrics.py  pathology_deidentify.py
deid_doc/util/: cas_handling.py  evaluation.py  ner_dataset.py  regex_collection.py  util.py
dome/: bert.py  cli.py  eval.py
dome/ml/: test.py  train.py  util.py
dome/plots/: plots.py
dome/post_processing/: deidentify_result.py  distinct_selection.py
dome/pre_processing/: analyze_split.py  current_data_splits.py  pathology_deidentify.py
dome/util/: cas_handling.py  constants.py  evaluation.py  ner_dataset.py  regex_collection.py  token_classification.py  util.py
envs/: inference_example.env  train_example.env
